# ClawFarm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  project.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
bot-template/: SOUL.md  config.template.json
bot-template/custom-endpoint/: template.meta.json
bot-template/default/: openclaw.template.json  template.meta.json
bot-template/minimax/: openclaw.template.json  template.meta.json
bot-template/openai/: openclaw.template.json  template.meta.json
bot-template/qwen/: openclaw.template.json  template.meta.json
bot-template/researcher/: SOUL.md  template.meta.json
dashboard/: Dockerfile  app.py  auth.py  backup.py  bots.py  caddy.py  config.py  docker_utils.py  entrypoint.sh  isolation.py  models.py  requirements.txt  scheduler.py  templates.py  token_history.py  utils.py
dashboard/routes/: __init__.py  auth.py  bots.py  fleet.py  terminal.py
dashboard/templates/: index.html
dashboard/tests/: conftest.py  helpers.py  test_api_auth.py  test_api_bots.py  test_api_fleet.py  test_api_terminal.py  test_auth.py  test_backup.py  test_bots.py  test_caddy.py  test_fleet.py  test_isolation.py  test_metadata.py  test_metrics.py  test_rollback.py  test_templates.py  test_token_history.py  test_utils.py
docs/: backups-and-rollback.md  deployment.md  qa-test-plan.md  roles-and-access.md  templates-and-providers.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
network/: Dockerfile  restore-isolation.sh  setup-isolation.sh
scripts/: init.sh
scripts/screenshots/: capture.ts  mock-data.ts  package-lock.json  package.json  run.sh
(+39 files in other folders)
