[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawfarm"
version = "0.1.0"
description = "Self-hosted fleet manager for OpenClaw AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "docker==7.1.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "bcrypt==5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov>=6.0",
    "httpx==0.28.1",
    "pre-commit>=4.0",
    "ruff>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = [
    "app", "config", "utils", "docker_utils", "models", "templates",
    "auth", "backup", "isolation", "caddy", "bots", "scheduler", "routes",
]

[tool.pytest.ini_options]
testpaths = ["dashboard/tests"]

[tool.coverage.run]
source = ["dashboard"]
omit = ["dashboard/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
